--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -143,18 +143,8 @@ This is the introduction.
 
 
 
-<<<<<<< HEAD
-\section{Preliminaries}
-\label{preliminaries}
-
-\subsection{Qualitative Spatial Representation and Reasoning}
-\subsubsection{Applications of Spatial Reasoning}
-\subsection{Constraint Logic Programming}
-=======
-
 \chapter{Background and Related Work} 
->>>>>>> 1890cd3592168dd9a040f22d3fc0d7a945f9e0aa
-
+This chapter is broken down into two sections. The first section presents an introduction to the background knowledge that will be needed throughout this thesis. The second section presents the related work to this thesis and provides a brief discussion on the differences and similarities of each work from the context of this thesis.  
 
 \section{Background}
 \label{background}
